name:                reactive-banana-glfw
version:             0.1.0.0
synopsis:            reactive-banana for GLFW
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            FRP
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Reactive.Banana.GLFW
    Reactive.Banana.GLFW.Types
    Reactive.Banana.GLFW.Window
    Reactive.Banana.GLFW.Mouse
    Reactive.Banana.GLFW.Button
    Reactive.Banana.GLFW.Utils
    Reactive.Banana.GLFW.WindowHandler
    Reactive.Banana.GLFW.AddHandler
    Reactive.Banana.GLFW.Internal.WindowE
    Reactive.Banana.GLFW.Internal.Utils
  build-depends:
    base            == 4.6.*,
    GLFW-b          == 1.4.*,
    reactive-banana == 0.7.*,
    transformers    == 0.3.*
